Bug 126673 - Calc: Auto-fit column and auto-fit row don't work with line break
Summary: Calc: Auto-fit column and auto-fit row don't work with line break
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0 target:6.5.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-08-02 09:39 UTC by Nukool Chompuparn
Modified: 2019-11-14 15:31 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
In cell A2, I used 'Ctrl'+'Enter' after 1st, 2nd and 3rd sentence. And I used 'Enter' after 4th sentence. Row 2 didn't extend the height to fit the content automatically. (19.40 KB, image/jpeg)
2019-08-02 09:41 UTC, Nukool Chompuparn
Details
And neither auto-fit column nor auto-fit row manually is disabled. (16.09 KB, image/jpeg)
2019-08-02 09:43 UTC, Nukool Chompuparn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nukool Chompuparn 2019-08-02 09:39:37 UTC
Description:
1. After entering any cell using line break manually, auto-fit row height does not extend the height to fit the content automatically. 
2. From no. 1, manual auto-fit column and manual auto-fit row also don't work with line break.

Steps to Reproduce:
1.Using line break in cell A2, I used 'Ctrl'+'Enter' after 1st, 2nd and 3rd sentence.   
2.And I used 'Enter' after 4th sentence.


Actual Results:
1. Row 2 didn't extend the height to fit the content automatically.
2. Double click to do auto-fit column and auto-fit row don't work with line break

Expected Results:
1. Auto-fit row must be done automatically.
2. Double click to do auto-fit column can be done after no.1. 


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Nukool Chompuparn 2019-08-02 09:41:17 UTC
Created attachment 153106 [details]
In cell A2, I used 'Ctrl'+'Enter' after 1st, 2nd and 3rd sentence. And I used 'Enter' after 4th sentence. Row 2 didn't extend the height to fit the content automatically.
Comment 2 Nukool Chompuparn 2019-08-02 09:43:29 UTC
Created attachment 153107 [details]
And neither auto-fit column nor auto-fit row manually is disabled.
Comment 3 Oliver Brinzing 2019-08-03 18:23:46 UTC
reproducible with:

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 81963b5c68b492f6a75dd17fb0bec80e5dad9955
CPU threads: 12; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded

steps to reproduce:

- new spreadsheet
- enter in cell A2: 
  AAA (ctrl+enter)
  BBB (ctrl+enter)
  CCC (enter)
- row height extends
- set row height for row 2 to 0,25cm
- set "Optimal Height..." (context menu/double click)
-> row 2 is wrongly set to default height

was ok in:

Version: 6.2.5.2 (x64)
Build-ID: 1ec314fa52f458adc18c4f025c545a4e8b22c159
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: 

Version: 6.3.1.0.0+ (x64)
Build ID: c1445671d1f43605ba5e4dc59d11307477fc7062
CPU threads: 12; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded
Comment 4 Oliver Brinzing 2019-08-04 08:54:42 UTC
seems to have started with:

https://gerrit.libreoffice.org/plugins/gitiles/core/+/c47d0174f2c6c3ebcb3b33276d0277e7aceac330

commit c47d0174f2c6c3ebcb3b33276d0277e7aceac330	[log]
author	Noel Grandin <noel.grandin@collabora.co.uk>	
Mon Jun 24 11:41:37 2019 +0200
committer Noel Grandin <noel.grandin@collabora.co.uk>	
Tue Jun 25 08:28:49 2019 +0200
tree 8b616687715719ea44b64b3638f68ea024802b90
parent 52800731baf9fcb88e54d60de5585640c8f97f7b [diff]

tdf#94677 Calc is slow opening large CSV, avoid reset SetUpdateMode

Avoid resetting SetUpdateMode in CreateFieldEditEngine while calculating
row height.

This takes the time from 1m25 to 49s for me.

$ git bisect good 2a2aa8404cb678e7ff4294f1acf4ab58290e0b42 is the first bad commit
commit 2a2aa8404cb678e7ff4294f1acf4ab58290e0b42
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Mon Jun 24 23:37:15 2019 -0700

    source c47d0174f2c6c3ebcb3b33276d0277e7aceac330

    source c47d0174f2c6c3ebcb3b33276d0277e7aceac330

:040000 040000 3358008bb02a684164c516287d8d823559f170fb cfec6f217b6df3929edd46162c192e3f73de2fda M      instdir

/cygdrive/d/sources/bibisect/bibisect-win64-6.4
$ git bisect log
# bad: [b5aeadaf0c99ddd26f240c77db13dfbaf3f0d2cb] source 6eefac3b3744f806b0a35afbd0d9669d840118f4
# good: [8d1eaf05d47fd1c56ddecbe57a9a7c8289ede7f4] source c98b1f1cd43b3e109bcaf6324ef2d1f449b34099
git bisect start 'master' 'oldest'
# bad: [a4c1d341edcbf697f2cacdb9857549c355a5d221] source 68cd8a97510ccfccb98516539ddb4affc94d46fa
git bisect bad a4c1d341edcbf697f2cacdb9857549c355a5d221
# good: [67be8776331efcaabd433b3ed6ff6b58c56413b2] source 70accc2904edb5c4aa9b5acb7ff2889a77717b75
git bisect good 67be8776331efcaabd433b3ed6ff6b58c56413b2
# bad: [570444f9ad28801a4e801c79543473de1fadc875] source 36defda96fc62cef1e1ffb725f6768d54b0d9cd0
git bisect bad 570444f9ad28801a4e801c79543473de1fadc875
# good: [40674cdf367c1dead50b6478ea3b8fac6500688a] source fa664e9d30ca9e69af8b5b2c1f3e7739b55f30bb
git bisect good 40674cdf367c1dead50b6478ea3b8fac6500688a
# good: [2a2b0885664e318fe8162765b7286f1a6e9eb059] source a53768abccfa81d4dfb15629e02ea61072bfc905
git bisect good 2a2b0885664e318fe8162765b7286f1a6e9eb059
# good: [d9b974d73a61a3c7e80e196d9b26adb799a5c3a2] source 1a45fd04cae6364f0f12e42a35beb1cce14a21f4
git bisect good d9b974d73a61a3c7e80e196d9b26adb799a5c3a2
# bad: [964016c59d5f9e94f8949967dfd527876abbff4b] source 44250864a8252d29c87801a4530e3fe3efd01ba7
git bisect bad 964016c59d5f9e94f8949967dfd527876abbff4b
# bad: [f7afe646afb8cb49d5b434be49770617e1b8754b] source 1c1f5ab3cb8f75ed386abd0b1a9a723555785766
git bisect bad f7afe646afb8cb49d5b434be49770617e1b8754b
# good: [073d3cac0cbd74cfc47fc6adf34e2ee43ec5999c] source c3695234916f86d6e929d59327db062f6bf90fef
git bisect good 073d3cac0cbd74cfc47fc6adf34e2ee43ec5999c
# bad: [2a2aa8404cb678e7ff4294f1acf4ab58290e0b42] source c47d0174f2c6c3ebcb3b33276d0277e7aceac330
git bisect bad 2a2aa8404cb678e7ff4294f1acf4ab58290e0b42
# good: [2db11ea03cbb90651544b1f706e0dd26a37566c6] source 52800731baf9fcb88e54d60de5585640c8f97f7b
git bisect good 2db11ea03cbb90651544b1f706e0dd26a37566c6
# first bad commit: [2a2aa8404cb678e7ff4294f1acf4ab58290e0b42] source c47d0174f2c6c3ebcb3b33276d0277e7aceac330
Comment 5 Commit Notification 2019-08-07 14:56:16 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/0e12a4055de19271e8756a323df684c0985c8e3a%5E%21

tdf#126673 Auto-fit column and auto-fit row don't work with line break

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2019-08-08 09:58:47 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: 63889d3d465e9b4292dd5bb630bd3394494c8a6d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES-valencia (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Noel, thanks for taking care of this issue!
Comment 7 Commit Notification 2019-11-14 15:31:49 UTC
Zdeněk Crhonek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c71a038697b9a2e5d85465d093b525159c9941e4

uitest for bug tdf#126673

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.