tdf#126673 Auto-fit column and auto-fit row don't work with line break

Revert "tdf#94677 Calc is slow opening large CSV, avoid reset SetUpdateMode"

This reverts commit c47d0174f2c6c3ebcb3b33276d0277e7aceac330.

Change-Id: I38e065d44dfb9d08498176b8231aff14ff51d91c